--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,12 +3,11 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "fino"
+name = "fino-file-sharing"
 version = "0.1.0"
 description = "Proof-of-Concept: Secure File Sharing via IPFS + Nostr DMs"
-authors = [{ name = "arnispen" }]
+authors = [{ name = "arnispen", email = "arnispen@example.com" }]
 license = "MIT"
-license-files = ["LICENSE"]
 requires-python = ">=3.8"
 readme = "README.md"
 keywords = ["nostr", "ipfs", "encryption", "file-sharing", "proof-of-concept", "innovation"]
