--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "ffs"
 version = "0.1.0"
 description = "Proof-of-Concept: Secure File Sharing via IPFS + Nostr DMs"
-authors = [{ name = "arnispen", email = "arnispen@example.com" }]
+authors = [{ name = "arnispen" }]
 license = "MIT"
 requires-python = ">=3.8"
 readme = "README.md"
@@ -34,7 +34,7 @@ dependencies = [
 ]
 
 [project.scripts]
-fino = "fino.main:app"
+ffs = "fino.main:app"
 
 [project.optional-dependencies]
 dev = [
