--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "ffs"
+name = "pyfino"
 version = "0.1.0"
 description = "Proof-of-Concept: Secure File Sharing via IPFS + Nostr DMs"
 authors = [{ name = "arnispen" }]
@@ -34,7 +34,7 @@ dependencies = [
 ]
 
 [project.scripts]
-ffs = "fino.main:app"
+fino = "fino.main:app"
 
 [project.optional-dependencies]
 dev = [
