--- a/.gitignore
+++ b/.gitignore
@@ -244,7 +244,7 @@ profiles/
 *.egg-info/
 
 # Cursor rules (local configuration)
-.cursorrules
+.cursor/
 
 # Development and testing
 .pytest_cache/
