--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pyfino"
-version = "0.1.0"
+version = "0.2.0"
 description = "Proof-of-Concept: Secure File Sharing via IPFS + Nostr DMs"
 authors = [{ name = "arnispen" }]
 license = "MIT"
@@ -38,9 +38,8 @@ fino = "fino.main:app"
 
 [project.optional-dependencies]
 dev = [
-    "black>=23.0.0",
-    "flake8>=6.0.0",
-    "mypy>=1.0.0",
+    "ruff>=0.6.0",
+    "mypy>=1.0.0"
 ]
 
 [project.urls]
