--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "typer>=0.9.0",
     "python-dotenv>=1.0.0",
     "websockets>=11.0.0",
+    "rich>=13.0.0",
 ]
 
 [project.scripts]
